feat: Security headers, CORS, Timeout Middelware, Custom panic recovery, Linter config, cursor pagination, filtering options, email service
